# Daemon

./: .gitignore  EXECUTIVE.md  README.md  TROUBLESHOOT.md  package-lock.json  setup-macos.sh  setup-windows.ps1
daemon-cli/: README.md  daemon  pyproject.toml  readme.txt
daemon-cli/daemon_cli/: __init__.py  __main__.py  build.py  cli.py  main.py  models.py  schema.py
daemon-cli/daemon_cli/generators/: __init__.py  cgen.py  integration.py  manifest.py
daemon-cli/daemon_cli/parsers/: __init__.py  annotation.py
daemon-cli/docs/: desktop-reference.md  manufacturers.md  sleepy_runbook.md
daemon-cli/examples/annotated_firmware/: Makefile  main.c
daemon-cli/examples/firmware_manufacturers/gripworks_gripper/: README.md  main.c
daemon-cli/examples/firmware_manufacturers/linetrace_sensor/: README.md  main.c
daemon-cli/examples/firmware_manufacturers/skylift_drone/: README.md  main.c
daemon-cli/examples/manifests/: arm.yml  base.yml  collision_grip.yml  collision_turn.yml  gripworks_gripper.yml  linetrace_sensor.yml  skylift_drone.yml
daemon-cli/examples/node-emulator/: README.md  emulator.py
daemon-cli/firmware-code/configs/arm_manipulator-20260214t065054z-2d6b47/: DAEMON.yaml  daemon_entry.c  manifest.json
daemon-cli/firmware-code/configs/arm_manipulator-20260214t070742z-711dc3/: DAEMON.yaml  daemon_entry.c  manifest.json
daemon-cli/firmware-code/profiles/arm_manipulator/: README.md
daemon-cli/schema/: daemon.schema.v0_1.json
daemon-cli/tests/: test_build.py  test_parsers.py  test_schema.py
daemon-cli/tools/: smoke_test_extended.sh
web/: README.md  (+3 more)
(+89 files in other folders)
